--- a/webapps/ROOT/index.html
+++ b/webapps/ROOT/index.html
@@ -46,7 +46,7 @@
             <script src="assets/js/botchat.js"></script>
             <script>
                 BotChat.App({
-                    directLine: { secret: 'js5TVX4rYDY.cwA.6iA.AJnjaD0L4PbSWm-uFtaU00S6Th4IwajKMMipyxH3A_k' },    //chatBotPSA
+                    directLine: { secret: '8qKrpPRDrYc.cwA.XWk.w0dfusyy_NNJI8bz-eHod8s6hUlxSL732ry0PVwTIB0' },    //chatBotPSA
                     user: { id: 'userid' },
                     bot: { id: 'botid' },
                     resize: 'detect'
