--- a/webapps/ROOT/index.html
+++ b/webapps/ROOT/index.html
@@ -46,7 +46,7 @@
             <script src="assets/js/botchat.js"></script>
             <script>
                 BotChat.App({
-                    directLine: { secret: '8qKrpPRDrYc.cwA.XWk.w0dfusyy_NNJI8bz-eHod8s6hUlxSL732ry0PVwTIB0' },    //chatBotPSA
+                    directLine: { secret: '1Vxk2ya0MPA.cwA.QEQ.KZQ2QkdSNmkJ_lq7fYx4K1axByZJVb41Tgr1gOTXXdc' },    //chatBotPSA
                     user: { id: 'userid' },
                     bot: { id: 'botid' },
                     resize: 'detect'
