--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   	<script src="javascripts/vagel.js"></script>
   	<script>
         const botConnection = new BotChat.DirectLine({
-            secret: '2gIRLJx-vUY.cwA.eVs.6K9Dk-RNgyuX0uJsuz18IOzzojGgWudEQ7oi_Vr2Chs'
+            secret: '1Vxk2ya0MPA.cwA.QEQ.KZQ2QkdSNmkJ_lq7fYx4K1axByZJVb41Tgr1gOTXXdc'
         });
 
 		BotChat.App({
