--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   	<!--<script src="https://grandizer.azurewebsites.net/lib/B_tLKTzaqVzw=90All.js"></script>-->
   	<script src="https://grandizer.azurewebsites.net/lib/recorderWorker.js"></script>
   	<script src="https://grandizer.azurewebsites.net/lib/r_2L=91cmJzxIl.js"></script>
-  	<!--<script src="https://grandizer.azurewebsites.net/lib/d_zGK93GFZztll.js"></script>-->
+  	<script src="https://grandizer.azurewebsites.net/lib/d_zGK93GFZztll.js"></script>
 
   	<script src="javascripts/s_2b=Z3GKTzVll.js"></script>
   	<script src="javascripts/d_zGK93GFZzaOyVll.js"></script>
