--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
   	<div id="bot" />
   	<script src="https://grandizer.azurewebsites.net/lib/jquery.min.js"></script>
-  	<!--<script src="https://grandizer.azurewebsites.net/lib/B_tLKTzaqVzw=90All.js"></script>-->
+  	<script src="https://grandizer.azurewebsites.net/lib/B_tLKTzaqVzw=90All.js"></script>
   	<script src="https://grandizer.azurewebsites.net/lib/recorderWorker.js"></script>
   	<script src="https://grandizer.azurewebsites.net/lib/r_2L=91cmJzxIl.js"></script>
   	<script src="https://grandizer.azurewebsites.net/lib/d_zGK93GFZztll.js"></script>
