--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   	<script src="javascripts/s_2b=Z3GKTzVll.js"></script>
   	<script src="javascripts/d_zGK93GFZzaOyVll.js"></script>
   	<script src="javascripts/botchat.js"></script>
-  	<script src="javascripts/vagel.js"></script>
+  	<!--<script src="javascripts/vagel.js"></script>-->
   	<script>
         const botConnection = new BotChat.DirectLine({
             secret: '1Vxk2ya0MPA.cwA.QEQ.KZQ2QkdSNmkJ_lq7fYx4K1axByZJVb41Tgr1gOTXXdc'
