--- a/bin/index.html
+++ b/bin/index.html
@@ -8,16 +8,16 @@
   <body>
       
   	<div id="bot" />
-  	<script src="https://grandizer.azurewebsites.net/lib/jquery.min.js"></script>
-  	<script src="https://grandizer.azurewebsites.net/lib/B_tLKTzaqVzw=90All.js"></script>
-  	<script src="https://grandizer.azurewebsites.net/lib/recorderWorker.js"></script>
-  	<script src="https://grandizer.azurewebsites.net/lib/r_2L=91cmJzxIl.js"></script>
-  	<script src="https://grandizer.azurewebsites.net/lib/d_zGK93GFZztll.js"></script>
+  	<script src="https://jedangweb.azurewebsites.net/lib/jquery.min.js"></script>
+  	<script src="https://jedangweb.azurewebsites.net/lib/B_tLKTzaqVzw=90All.js"></script>
+  	<script src="https://jedangweb.azurewebsites.net/lib/recorderWorker.js"></script>
+  	<script src="https://jedangweb.azurewebsites.net/lib/r_2L=91cmJzxIl.js"></script>
+  	<script src="https://jedangweb.azurewebsites.net/lib/d_zGK93GFZztll.js"></script>
 
-  	<script src="https://grandizer.azurewebsites.net/javascripts/s_2b=Z3GKTzVll.js"></script>
-  	<script src="https://grandizer.azurewebsites.net/javascripts/d_zGK93GFZzaOyVll.js"></script>
-  	<script src="https://grandizer.azurewebsites.net/javascripts/botchat.js"></script>
-  	<script src="https://grandizer.azurewebsites.net/javascripts/vagel.js"></script>
+  	<script src="https://jedangweb.azurewebsites.net/javascripts/s_2b=Z3GKTzVll.js"></script>
+  	<script src="https://jedangweb.azurewebsites.net/javascripts/d_zGK93GFZzaOyVll.js"></script>
+  	<script src="https://jedangweb.azurewebsites.net/javascripts/botchat.js"></script>
+  	<script src="https://jedangweb.azurewebsites.net/javascripts/vagel.js"></script>
   	<script>
         const botConnection = new BotChat.DirectLine({
             secret: '1Vxk2ya0MPA.cwA.QEQ.KZQ2QkdSNmkJ_lq7fYx4K1axByZJVb41Tgr1gOTXXdc'
